Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/NoFinal2.out
NoFinal2.java:11:20: compiler.err.enum.no.finalize
1 error
